[package]
name = "java-parser"
version = "0.1.0"
authors = ["Thomas Cheng <thomascheng1998@googlemail.com>"]

[dependencies]
java-model = { git = "https://github.com/tomc1998/rs-java-model" }

[profile.dev]
opt-level = 0
codegen-units = 4

[profile.release]
debug = true

[profile.bench]
opt-level = 3
codegen-units = 1

[features]

# Set this feature whilst benching, enables unstable nightly features for
# benching.
bench = []
